# Chess

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  .shellcheckrc  CMakeLists.txt  README.md  sonar-project.properties
.circleci/: config.yml
.github/: codecov.yml
.github/workflows/: build.yml  codacy-analysis.yml  fix-llvm-header-guard.sh  lint.yml
src/: main.cc
src/engine/: bitboard.hh  board.cc  board.hh
src/engine/moves/: move.hh  pawn.hh
src/test_cov/: test.hh  test2.hh  test_tmp.cc  test_tmp.hh
test/unit/: test.cc  test_board.cc
tests/unit/: test_board.cc
tests/unit/moves/: test_pawn.cc
utils/: run_clang_format.sh  run_clang_tidy.sh  run_shellcheck.sh
